dnl
dnl
dnl configure.in.head:
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/main.c)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_AWK
AC_CHECK_PROG(TAR,tar,tar)
AC_CHECK_PROG(GZIP,gzip,gzip)
AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)

AC_SYS_LARGEFILE

XLSHIM_MAJOR_VERSION=1
XLSHIM_MINOR_VERSION=0
XLSHIM_MICRO_VERSION=1


XLSHIM_MAJOR_VERSION=$XLSHIM_MAJOR_VERSION.$XLSHIM_MINOR_VERSION.$XLSHIM_MICRO_VERSION

AC_SUBST(XLSHIM_MAJOR_VERSION)
AC_SUBST(XLSHIM_MINOR_VERSION)
AC_SUBST(XLSHIM_MICRO_VERSION)
AC_SUBST(XLSHIM_VERSION)


VERSION=$XLSHIM_VERSION
PACKAGE=xlshim

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)


AM_CONFIG_HEADER(src/config.h)

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])
AC_HEADER_STDC
AC_FUNC_MALLOC

AC_C_INLINE
AC_C_CONST

PKG_CHECK_MODULES([DBUS],[dbus-1])
PKG_CHECK_MODULES([DBUS_GLIB],[dbus-glib-1])

AC_ARG_WITH(idldir,AC_HELP_STRING([--with-idldir=PATH],[Path to dbus idl desription files]),
                IDLDIR=$with_idldir,IDLDIR=/usr/share/idl)

AC_SUBST(IDLDIR)
AC_SUBST(RPCGEN_TEMPLATES)

AC_CHECK_PROG(XC_RPCGEN,xc-rpcgen,xc-rpcgen)


AC_OUTPUT([Makefile
	   src/Makefile])

